--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -42,6 +43,14 @@
 
             <!-- Actions -->
             <div class="flex items-center gap-3">
+                <div id="authButtons" class="flex items-center gap-2">
+                    <button onclick="openAuthModal()"
+                        class="flex items-center gap-2 text-xs font-bold text-slate-600 hover:text-indigo-600 transition-all bg-slate-50 hover:bg-indigo-50 px-3 py-2 rounded-lg border border-slate-200 hover:border-indigo-200">
+                        <i class="fa-solid fa-user text-slate-400"></i>
+                        <span class="hidden sm:inline" id="authButtonText">Giriş Yap</span>
+                    </button>
+                </div>
+                <div class="h-6 w-px bg-slate-200 mx-1"></div>
                 <button onclick="openSettingsModal()"
                     class="flex items-center gap-2 text-xs font-bold text-slate-600 hover:text-indigo-600 transition-all bg-slate-50 hover:bg-indigo-50 px-3 py-2 rounded-lg border border-slate-200 hover:border-indigo-200">
                     <i class="fa-solid fa-key text-slate-400"></i>
@@ -119,6 +128,40 @@
     <!-- ==========================================
          MODALS
          ========================================== -->
+
+    <!-- Auth Modal -->
+    <div id="authModal"
+        class="fixed inset-0 bg-slate-900/40 backdrop-blur-sm z-50 hidden flex items-center justify-center p-4">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 animate-fade-in-up">
+            <h3 class="text-lg font-bold text-slate-800 mb-4">Giriş Yap / Kayıt Ol</h3>
+            <div id="authError" class="hidden mb-4 p-3 bg-red-50 border border-red-200 rounded-lg text-red-700 text-sm">
+            </div>
+            <div class="mb-4">
+                <label class="block text-xs font-bold text-slate-700 mb-1.5 ml-1">E-posta</label>
+                <input type="email" id="authEmailInput"
+                    class="w-full bg-slate-50 border border-slate-200 rounded-xl px-3 py-2.5 text-sm focus:ring-2 focus:ring-indigo-500 outline-none"
+                    placeholder="ornek@email.com">
+            </div>
+            <div class="mb-6">
+                <label class="block text-xs font-bold text-slate-700 mb-1.5 ml-1">Şifre</label>
+                <input type="password" id="authPasswordInput"
+                    class="w-full bg-slate-50 border border-slate-200 rounded-xl px-3 py-2.5 text-sm focus:ring-2 focus:ring-indigo-500 outline-none"
+                    placeholder="••••••••">
+            </div>
+            <div class="flex justify-between items-center mb-4">
+                <button onclick="toggleAuthMode()" class="text-xs text-indigo-600 hover:text-indigo-700 font-bold">
+                    <span id="authModeText">Kayıt ol</span> yerine <span id="authModeAction">giriş yap</span>
+                </button>
+            </div>
+            <div class="flex justify-end gap-3">
+                <button onclick="closeAuthModal()"
+                    class="px-5 py-2.5 text-sm font-bold text-slate-500 hover:bg-slate-100 rounded-xl">İptal</button>
+                <button onclick="handleAuth()" id="authSubmitBtn"
+                    class="px-6 py-2.5 text-sm bg-indigo-600 text-white rounded-xl hover:bg-indigo-700 font-bold">Giriş
+                    Yap</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Settings Modal -->
     <div id="settingsModal"
